--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 									<div class="table-wrapper">
 										<table>
 											<tbody>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra.</p>
+											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
 											<tr>
 												<td>Cape Buffalo</td>
 												<td>$10,000</td>
