--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a target="_blank" href="https://www.facebook.com/majunesafaris/photos">Gallery</a></li>
+								<li><a href="#gallery">Gallery</a></li>
 								<li><a href="#rates">Rates</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
@@ -38,6 +38,22 @@
 
 				<!-- Main -->
 					<div id="main">
+
+						<article id="gallery">
+							<h2 class="major">Gallery</h2>
+							<img src="images/gallery/2.png" width="100%">
+							<img src="images/gallery/1.png" width="100%">
+							<img src="images/gallery/3.png" width="100%">
+							<img src="images/gallery/4.png" width="100%">
+							<img src="images/gallery/5.png" width="100%">
+							<img src="images/gallery/6.png" width="100%">
+							<img src="images/gallery/7.png" width="100%">
+							<img src="images/gallery/8.png" width="100%">
+							<img src="images/gallery/9.png" width="100%">
+							<img src="images/gallery/11.png" width="100%">
+							<img src="images/gallery/12.png" width="100%">
+							<img src="images/gallery/13.png" width="100%">
+						</article>
 
 						<!-- Rates -->
 							<article id="rates">
@@ -97,7 +113,8 @@
 
 								<h2 class="major">About Us</h2>
 
-
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+								<img src="images/About%20Us.png">
 							</article>
 
 						<!-- Contact -->
