Added some photos

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 								<li><a href="#rates">Rates</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
+<!--								<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
 					</header>
@@ -41,8 +42,10 @@
 
 						<article id="gallery">
 							<h2 class="major">Gallery</h2>
+							<p>Please visit us on <a target="_blank" href="https://www.facebook.com/majunesafaris/" style="color:#1877F2!important;">Facebook</a> for the latest photos.</p>
 							<img src="images/gallery/2.png" width="100%">
 							<img src="images/gallery/1.png" width="100%">
+							<img src="images/gallery/croc.png" width="100%">
 							<img src="images/gallery/3.png" width="100%">
 							<img src="images/gallery/4.png" width="100%">
 							<img src="images/gallery/5.png" width="100%">
@@ -53,6 +56,8 @@
 							<img src="images/gallery/11.png" width="100%">
 							<img src="images/gallery/12.png" width="100%">
 							<img src="images/gallery/13.png" width="100%">
+							<img src="images/gallery/lion.png" width="100%">
+							<img src="images/gallery/elephant.png" width="100%">
 						</article>
 
 						<!-- Rates -->
@@ -111,10 +116,18 @@
 							<article id="about">
 
 
-								<h2 class="major">About Us</h2>
 
+								<h2 class="major">About Us</h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-								<img src="images/About%20Us.png">
+
+								<h3>Reviews</h3>
+								<blockquote>Excellent food, superb accommodations, great people, quality animals and phenomenal concession. Would highly recommend!</blockquote>
+								<blockquote>Superb real hunting experience. Unforgettable!</blockquote>
+
+								<img src="images/lodge.png" width="100%">
+
+								<img src="images/truck.png" width="100%">
+
 							</article>
 
 						<!-- Contact -->
@@ -384,7 +397,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Majune Safaris</p> <a href="#" class="icon brands fa-facebook-square fa-2x"><span class="label">Facebook</span></a>
+						<p class="copyright">&copy; Majune Safaris</p> <a target="_blank" href="https://www.facebook.com/majunesafaris/" class="icon brands fa-facebook-square fa-2x" ><span class="label">Facebook</span></a>
 					</footer>
 
 			</div>
