--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-
-
-		<link href="assets/css/nanogallery.css" rel="stylesheet" type="text/css">
 	</head>
 	<body class="is-preload">
 
@@ -32,7 +29,6 @@
 								<li><a href="#rates">Rates</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
-<!--								<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
 					</header>
@@ -68,40 +64,54 @@
 									<div class="table-wrapper">
 										<table>
 											<tbody>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-											<tr>
-												<td>Cape Buffalo</td>
-												<td>$10,000</td>
-											</tr>
+											<h4>Included In Price</h4>
+											<ol>
+												<li>17% VAT.</li>
+												<li>Full accommodation</li>
+												<li>Alcoholic beverages</li>
+												<li>Hunting service with 4x4 vehicles</li>
+												<li>PH and Trackers</li>
+											</ol>
 
-											<tr>
-												<td>Leopard</td>
-												<td>$10,000</td>
-											</tr>
-											<tr>
-												<td>Kudu</td>
-												<td>$10,000</td>
-											</tr>
-											<tr>
-												<td>Crocodile</td>
-												<td>$10,000</td>
-											</tr>
-											<tr>
-												<td>Bush Pig</td>
-												<td>$10,000</td>
-											</tr>
-											<tr>
-												<td>Black Wildebeest</td>
-												<td>$10,000</td>
-											</tr>
-											<tr>
-												<td>Blesbok</td>
-												<td>$10,000</td>
-											</tr>
+											<h4>Not Included In Price</h4>
+											<ol>
+												<li>Hunting license 400 €</li>
+												<li>Gun Import License 400 € (each gun)</li>
+												<li>First preparation of trophies and transport guides 700 €</li>
+												<li>Transport by air-conditioned car airport camp and return 300 € (each trip)</li>
+												<li>Hotels and all expenses before the hunt begins and after it ends.</li>
+												<li>Trophy fees</li>
+												<li>Non hunter 150€ day</li>
+											</ol>
+
+											<tr><td>Buffalo and Antelope Safari 12 Day Hunting (No lion or leopard)</td><td>€ 13,500</td></tr>
+											<tr><td>Leopard Safari 14 Days Hunting (With buffalo and antilopes)</td><td>€ 18,000</td></tr>
+											<tr><td>Lion Safari 14 Days Hunting (With buffalo and antilopes)</td><td>€ 25,000</td></tr>
+											<tr><td>Lion and Leopard Safari 21 Days Hunting (With buffalo and antilopes)</td><td>€ 38,000</td></tr>
+											<tr><td>Lion</td><td>€ 20,000</td></tr>
+											<tr><td>Leopard</td><td>€ 6,500</td></tr>
+											<tr><td>Buffalo</td><td>€ 3,500</td></tr>
+											<tr><td>Sable Roosevelt</td><td>€ 4,500</td></tr>
+											<tr><td>Eland Livingstone</td><td>€ 2,800</td></tr>
+											<tr><td>Crocodile</td><td>€ 2,200</td></tr>
+											<tr><td>Bushbuck Chobe</td><td>€ 1,400</td></tr>
+											<tr><td>Kudo</td><td>€ 1,800</td></tr>
+											<tr><td>Reedbuck</td><td>€ 1,100</td></tr>
+											<tr><td>Waterbuck</td><td>€ 1,600</td></tr>
+											<tr><td>Bushpig</td><td>€ 600</td></tr>
+											<tr><td>Hartbeast Liechtenstein</td><td>€ 1,600</td></tr>
+											<tr><td>Gnou from Niassa</td><td>€ 2,500</td></tr>
+											<tr><td>Gray Duiker</td><td>€ 500</td></tr>
+											<tr><td>Baboon</td><td>€ 300</td></tr>
+											<tr><td>Warthog</td><td>€ 600</td></tr>
+											<tr><td>Hyena</td><td>€ 1,400</td></tr>
+											<tr><td>Zebra Crawshay´s</td><td>€ 2,000</td></tr>
+											<tr><td>Sharp´s Grysbok</td><td>€ 1,200</td></tr>
+
 											</tbody>
 											<tfoot>
 											<tr>
-												<td colspan="3">*All prices include a PH</td>
+												<td colspan="3">*1 hunter one PH</td>
 											</tr>
 											</tfoot>
 										</table>
@@ -411,7 +421,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script src="assets/js/nanogallery.js"></script>
 
 	</body>
 </html>
