--- a/index.html
+++ b/index.html
@@ -75,38 +75,38 @@
 
 											<h4>Not Included In Price</h4>
 											<ol>
-												<li>Hunting license 400 €</li>
-												<li>Gun Import License 400 € (each gun)</li>
-												<li>First preparation of trophies and transport guides 700 €</li>
-												<li>Transport by air-conditioned car airport camp and return 300 € (each trip)</li>
+												<li>Hunting license €400</li>
+												<li>Gun Import License €400 (each gun)</li>
+												<li>First preparation of trophies and transport guides €700</li>
+												<li>Transport by air-conditioned car airport camp and return €300 (each trip)</li>
 												<li>Hotels and all expenses before the hunt begins and after it ends.</li>
 												<li>Trophy fees</li>
-												<li>Non hunter 150€ day</li>
+												<li>Non hunter €150 day</li>
 											</ol>
 
-											<tr><td>Buffalo and Antelope Safari 12 Day Hunting (No lion or leopard)</td><td>€ 13,500</td></tr>
-											<tr><td>Leopard Safari 14 Days Hunting (With buffalo and antilopes)</td><td>€ 18,000</td></tr>
-											<tr><td>Lion Safari 14 Days Hunting (With buffalo and antilopes)</td><td>€ 25,000</td></tr>
-											<tr><td>Lion and Leopard Safari 21 Days Hunting (With buffalo and antilopes)</td><td>€ 38,000</td></tr>
-											<tr><td>Lion</td><td>€ 20,000</td></tr>
-											<tr><td>Leopard</td><td>€ 6,500</td></tr>
-											<tr><td>Buffalo</td><td>€ 3,500</td></tr>
-											<tr><td>Sable Roosevelt</td><td>€ 4,500</td></tr>
-											<tr><td>Eland Livingstone</td><td>€ 2,800</td></tr>
-											<tr><td>Crocodile</td><td>€ 2,200</td></tr>
-											<tr><td>Bushbuck Chobe</td><td>€ 1,400</td></tr>
-											<tr><td>Kudo</td><td>€ 1,800</td></tr>
-											<tr><td>Reedbuck</td><td>€ 1,100</td></tr>
-											<tr><td>Waterbuck</td><td>€ 1,600</td></tr>
-											<tr><td>Bushpig</td><td>€ 600</td></tr>
-											<tr><td>Hartbeast Liechtenstein</td><td>€ 1,600</td></tr>
-											<tr><td>Gnou from Niassa</td><td>€ 2,500</td></tr>
-											<tr><td>Gray Duiker</td><td>€ 500</td></tr>
-											<tr><td>Baboon</td><td>€ 300</td></tr>
-											<tr><td>Warthog</td><td>€ 600</td></tr>
-											<tr><td>Hyena</td><td>€ 1,400</td></tr>
-											<tr><td>Zebra Crawshay´s</td><td>€ 2,000</td></tr>
-											<tr><td>Sharp´s Grysbok</td><td>€ 1,200</td></tr>
+											<tr><td>Buffalo and Antelope Safari 12 Day Hunting (No lion or leopard)</td><td>€13,500</td></tr>
+											<tr><td>Leopard Safari 14 Days Hunting (With buffalo and antilopes)</td><td>€18,000</td></tr>
+											<tr><td>Lion Safari 14 Days Hunting (With buffalo and antilopes)</td><td>€25,000</td></tr>
+											<tr><td>Lion and Leopard Safari 21 Days Hunting (With buffalo and antilopes)</td><td>€38,000</td></tr>
+											<tr><td>Lion</td><td>€20,000</td></tr>
+											<tr><td>Leopard</td><td>€6,500</td></tr>
+											<tr><td>Buffalo</td><td>€3,500</td></tr>
+											<tr><td>Sable Roosevelt</td><td>€4,500</td></tr>
+											<tr><td>Eland Livingstone</td><td>€2,800</td></tr>
+											<tr><td>Crocodile</td><td>€2,200</td></tr>
+											<tr><td>Bushbuck Chobe</td><td>€1,400</td></tr>
+											<tr><td>Kudo</td><td>€1,800</td></tr>
+											<tr><td>Reedbuck</td><td>€1,100</td></tr>
+											<tr><td>Waterbuck</td><td>€1,600</td></tr>
+											<tr><td>Bushpig</td><td>€600</td></tr>
+											<tr><td>Hartbeast Liechtenstein</td><td>€1,600</td></tr>
+											<tr><td>Gnou from Niassa</td><td>€2,500</td></tr>
+											<tr><td>Gray Duiker</td><td>€500</td></tr>
+											<tr><td>Baboon</td><td>€300</td></tr>
+											<tr><td>Warthog</td><td>€600</td></tr>
+											<tr><td>Hyena</td><td>€1,400</td></tr>
+											<tr><td>Zebra Crawshay´s</td><td>€2,000</td></tr>
+											<tr><td>Sharp´s Grysbok</td><td>€1,200</td></tr>
 
 											</tbody>
 											<tfoot>
