--- a/index.html
+++ b/index.html
@@ -142,17 +142,17 @@
 
 						<!-- Contact -->
 							<article id="contact">
-								<iframe title="Embedded Wufoo Form"
-										height="517"
-										allowTransparency="true"
-										frameborder="0"
-										scrolling="no"
-										style="width:100%;border:none"
-										src="https://webartistcompany.wufoo.com/embed/q1brrqh30ul4psb/">
-									<a href="https://webartistcompany.wufoo.com/forms/q1brrqh30ul4psb/">
-										Fill out my Wufoo form!
-									</a>
-								</iframe>
+<!--								<iframe title="Embedded Wufoo Form"-->
+<!--										height="517"-->
+<!--										allowTransparency="true"-->
+<!--										frameborder="0"-->
+<!--										scrolling="no"-->
+<!--										style="width:100%;border:none"-->
+<!--										src="https://webartistcompany.wufoo.com/embed/q1brrqh30ul4psb/">-->
+<!--									<a href="https://webartistcompany.wufoo.com/forms/q1brrqh30ul4psb/">-->
+<!--										Fill out my Wufoo form!-->
+<!--									</a>-->
+<!--								</iframe>-->
 								<div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">
                             <span class="notranslate">
                               HTML Forms powered by <a href="http://www.wufoo.com">Wufoo</a>.
