Updated facebook color.

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Majune Safaris</p> <a target="_blank" href="https://www.facebook.com/majunesafaris/" class="icon brands fa-facebook-square fa-2x" ><span class="label">Facebook</span></a>
+						<p class="copyright">&copy; Majune Safaris</p> <a target="_blank" href="https://www.facebook.com/majunesafaris/" class="icon brands fa-facebook-square fa-2x" style="color:#1877F2"><span class="label">Facebook</span></a>
 					</footer>
 
 			</div>
