--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
             <h2 class="major">Gallery</h2>
             <p>Please visit us on <a target="_blank" href="https://www.facebook.com/majunesafaris/"
                                      style="color:#1877F2!important;">Facebook</a> for the latest photos.</p>
-            <img src="images/gallery/2.png" width="100%">
-            <img src="images/gallery/1.png" width="100%">
-            <img src="images/gallery/croc.png" width="100%">
-            <img src="images/gallery/3.png" width="100%">
-            <img src="images/gallery/4.png" width="100%">
-            <img src="images/gallery/5.png" width="100%">
-            <img src="images/gallery/6.png" width="100%">
-            <img src="images/gallery/7.png" width="100%">
-            <img src="images/gallery/8.png" width="100%">
-            <img src="images/gallery/9.png" width="100%">
-            <img src="images/gallery/11.png" width="100%">
-            <img src="images/gallery/12.png" width="100%">
-            <img src="images/gallery/13.png" width="100%">
-            <img src="images/gallery/lion.png" width="100%">
-            <img src="images/gallery/elephant.png" width="100%">
+            <img src="images/gallery/2.jpg" width="100%">
+            <img src="images/gallery/1.jpg" width="100%">
+            <img src="images/gallery/croc.jpg" width="100%">
+            <img src="images/gallery/3.jpg" width="100%">
+            <img src="images/gallery/4.jpg" width="100%">
+            <img src="images/gallery/5.jpg" width="100%">
+            <img src="images/gallery/6.jpg" width="100%">
+            <img src="images/gallery/7.jpg" width="100%">
+            <img src="images/gallery/8.jpg" width="100%">
+            <img src="images/gallery/9.jpg" width="100%">
+            <img src="images/gallery/11.jpg" width="100%">
+            <img src="images/gallery/12.jpg" width="100%">
+            <img src="images/gallery/13.jpg" width="100%">
+            <img src="images/gallery/lion.jpg" width="100%">
+            <img src="images/gallery/elephant.jpg" width="100%">
         </article>
 
         <!-- Rates -->
@@ -206,9 +206,9 @@
             </blockquote>
             <blockquote>Superb real hunting experience. Unforgettable!</blockquote>
 
-            <img src="images/lodge.png" width="100%">
+            <img src="images/lodge.jpg" width="100%">
 
-            <img src="images/truck.png" width="100%">
+            <img src="images/truck.jpg" width="100%">
 
         </article>
 
