--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             <h2 class="major">Gallery</h2>
             <p>Please visit us on <a target="_blank" href="https://www.facebook.com/majunesafaris/"
                                      style="color:#1877F2!important;">Facebook</a> for the latest photos.</p>
+
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/IdjJYViGIQE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/A_S3vbYrJpE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <img src="https://majunesafaris.s3.us-east-2.amazonaws.com/2.jpg" width="100%">
             <img src="https://majunesafaris.s3.us-east-2.amazonaws.com/1.jpg" width="100%">
             <img src="https://majunesafaris.s3.us-east-2.amazonaws.com/croc.jpg" width="100%">
