Updated height & directions.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <p>Please visit us on <a target="_blank" href="https://www.facebook.com/majunesafaris/"
                                      style="color:#1877F2!important;">Facebook</a> for the latest photos.</p>
 
-            <iframe width="100%" height="315" src="https://www.youtube.com/embed/IdjJYViGIQE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="100%" height="315" src="https://www.youtube.com/embed/A_S3vbYrJpE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" src="https://www.youtube.com/embed/IdjJYViGIQE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" src="https://www.youtube.com/embed/A_S3vbYrJpE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <img src="https://majunesafaris.s3.us-east-2.amazonaws.com/2.jpg" width="100%">
             <img src="https://majunesafaris.s3.us-east-2.amazonaws.com/1.jpg" width="100%">
             <img src="https://majunesafaris.s3.us-east-2.amazonaws.com/croc.jpg" width="100%">
@@ -201,7 +201,12 @@
         <article id="about">
 
 
+
+
             <h2 class="major">About Us</h2>
+
+            <h3 class="major">Getting Here</h3>
+            <p>Fly to Maputo (MPM) Mozambique to Lichinga (VXC) Mozambique where you will be picked up by Manuel.  A 4-hour ride to camp will follow.</p>
 
             <h3>Reviews</h3>
             <blockquote>Excellent food, superb accommodations, great people, quality animals and phenomenal concession.
@@ -237,6 +242,7 @@
 
         </article>
     </div>
+
 
     <!-- Footer -->
     <footer id="footer">
